objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>TimeSpentOn_No_Build_Req__c</fullName>
        <formula>IF( ISBLANK(StopTime_No_Build_Req__c) ,
	(Now() - StartTime_No_Build_Req__c)*24*60 ,(StopTime_No_Build_Req__c - StartTime_No_Build_Req__c)*24*60)</formula>
        <label>TimeSpentOn_No Build Req</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Rejected__c</fullName>
        <formula>IF( ISBLANK(StopTime_Rejected__c) ,
	(Now() - StartTime_Rejected__c)*24*60 ,(StopTime_Rejected__c - StartTime_Rejected__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_SIT__c</fullName>
        <formula>IF( ISBLANK(StopTime_SIT__c) ,
	(Now() - StartTime_SIT__c)*24*60 ,(StopTime_SIT__c - StartTime_SIT__c)*24*60)</formula>
        <label>SIT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Submit_for_Business_Review__c</fullName>
        <formula>IF( ISBLANK(StopTime_Identify_Submit_for_Business__c) ,
	(Now() - StartTime_Identify_Submit_for_Business__c)*24*60 ,(StopTime_Identify_Submit_for_Business__c - StartTime_Identify_Submit_for_Business__c)*24*60)</formula>
        <label>Submit for Business Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Test_Production__c</fullName>
        <formula>IF( ISBLANK(StopTime_Test_Production__c) ,
	(Now() - StartTime_Test_Production__c)*24*60 ,(StopTime_Test_Production__c - StartTime_Test_Production__c)*24*60)</formula>
        <label>Test Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Test__c</fullName>
        <formula>IF( ISBLANK(StopTime_Test__c) ,
	(Now() - StartTime_Test__c)*24*60 ,(StopTime_Test__c - StartTime_Test__c)*24*60)</formula>
        <label>Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_UAT__c</fullName>
        <formula>IF( ISBLANK(StopTime_UAT__c) ,
	(Now() - StartTime_UAT__c)*24*60 ,(StopTime_UAT__c - StartTime_UAT__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotEst__c</fullName>
        <description>Total estimated value.</description>
        <formula>( Req__c + Des__c + BUT__c + SIT__c + UAT__c + TrnDep__c + Adapt__c )*
( 1+Cont__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total estimated value.</inlineHelpText>
        <label>Total Estimate (Bottom Up)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Level_of_Effort__c</fullName>
        <description>Total actual level of effort (in Hours) taken in completing the request (i.e. time taken in plan, design, build, test, UAT, deploy &amp; support)</description>
        <label>Total Actual Level of Effort</label>
        <summarizedField>Actual_Level_of_Effort__c.Total_Actual_Level_of_Effort__c</summarizedField>
        <summaryForeignKey>Actual_Level_of_Effort__c.Requirement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Effort_Variance__c</fullName>
        <description>Difference in Estimated Level of effort &amp; Actual level of effort</description>
        <formula>Total_Actual_Level_of_Effort__c - TotEst__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Effort Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimate_Bottom_Up__c</fullName>
        <description>Total estimated level of effort for build, design &amp; test of the request</description>
        <formula>Build_Total__c + Design_Total__c + Test_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Solution Capacity Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Priority_Ranking__c</fullName>
        <description>Priority ranking of the request based on Business benefit, Urgency of request, User impact &amp; LOE</description>
        <formula>( Business_Benefit_Value__c  +  Urgency_of_Request_Value__c  +  User_Impact_of_Change_Value__c  +  Level_of_Effort_Value__c  )  / 4</formula>
        <label>Total Priority Ranking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of days.</description>
        <inlineHelpText>Total number of days estimated.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrnDep__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Training and Deploying.</description>
        <inlineHelpText>Number of days estimated for Training and Deploying.</inlineHelpText>
        <label>Deploy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated to complete UAT.</description>
        <inlineHelpText>Number of days estimated to complete UAT.</inlineHelpText>
        <label>UAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request_Value__c</fullName>
        <description>Value is calculated by the selection of the Urgency of Request field.</description>
        <formula>CASE( 
Urgency_of_Request__c , 
&quot;HIGH&quot; , 3, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 1, 
0 
)</formula>
        <inlineHelpText>Value is calculated by the selection of the Urgency of Request field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
        <label>Urgency of Request Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request__c</fullName>
        <description>Urgency of request</description>
        <inlineHelpText>Low: Not required within the next 90 days to enable a business process 
Medium: Required within the next 46 – 90 days to enable a business process 
High: Required within the next 30 – 45 days to enable a business process</inlineHelpText>
        <label>Urgency of Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change_Value__c</fullName>
        <description>Value is calculated by the User Impact of Change field.</description>
        <formula>CASE( 
User_Impact_of_Change__c , 
&quot;High&quot;,1, 
&quot;Medium&quot;,2, 
&quot;Low&quot;, 3, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is calculated by the User Impact of Change field: 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>User Impact of Change Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change__c</fullName>
        <description>User impact from the request</description>
        <inlineHelpText>Low: Will Significantly Impact Users (high degree of adoption with significant effort) 
Medium: Will Moderately Impact Users (high degree of adoption with moderate effort) 
High: Will Minimally Impact Users (high degree of adoption with minimal effort)</inlineHelpText>
        <label>User Impact of Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_Driver__c</fullName>
        <label>Value Driver</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Eliminate Redundancies</fullName>
                </value>
                <value>
                    <fullName>2. Improve Data Quality</fullName>
                </value>
                <value>
                    <fullName>3. Automate AM &amp; Impl. Steps</fullName>
                </value>
                <value>
                    <fullName>4. Improve Coordination</fullName>
                </value>
                <value>
                    <fullName>5. Intuitive Workflows</fullName>
                </value>
                <value>
                    <fullName>6. Streamline Document Management</fullName>
                </value>
                <value>
                    <fullName>7. Improve Downstream Visibility</fullName>
                </value>
                <value>
                    <fullName>8. Increase Internal Partners on ICE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vlocity_Fit_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vlocity Fit Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vlocity_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vlocity Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Package__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Stream__c</fullName>
        <description>Distinguishes the requirement to either the Org Migration or Vlocity Project.</description>
        <label>Work Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Org Migration</fullName>
                </value>
                <value>
                    <fullName>Vlocity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Capability__c</columns>
        <columns>Category__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Release__c</columns>
        <columns>Request_Title__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Requirement_Type__c</columns>
        <columns>Des__c</columns>
        <columns>BUT__c</columns>
        <columns>TimeSpentOn_Build__c</columns>
        <columns>SIT__c</columns>
        <columns>TimeSpentOn_Test__c</columns>
        <columns>TrnDep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_Request_ID__c</field>
            <operation>equals</operation>
        </filters>
        <label>*All Requirements</label>
    </listViews>
    <listViews>
        <fullName>All_Requirements_EVH</fullName>
        <columns>NAME</columns>
        <columns>Capability__c</columns>
        <columns>Category__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Planned_Release__c</columns>
        <columns>Release__c</columns>
        <columns>Request_Title__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Requirement_Type__c</columns>
        <columns>Des__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_Request_ID__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Default_Record_Type</value>
        </filters>
        <label>*All Requirements - EVH</label>
        <sharedTo>
            <group>ACN_Biz_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kevin_Phase_1b_Requests</fullName>
        <columns>NAME</columns>
        <columns>Capability__c</columns>
        <columns>Request_Title__c</columns>
        <columns>Planned_Release__c</columns>
        <columns>Vlocity_Reviewed__c</columns>
        <columns>Vlocity_Fit_Confirmed__c</columns>
        <columns>Technical_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requirement_Type__c</field>
            <operation>equals</operation>
            <value>Business</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Close: Deployed,Close: Rejected,Close: Duplicate</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>Client</value>
        </filters>
        <label>Kevin - Phase 1b Requests Cap 1-4</label>
        <sharedTo>
            <group>ICE</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kevin_Release_1_Tech_Req</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Type__c</columns>
        <columns>Planned_Release__c</columns>
        <columns>Release__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_Request_ID__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Requirement_Type__c</field>
            <operation>equals</operation>
            <value>Technical</value>
        </filters>
        <filters>
            <field>Planned_Release__c</field>
            <operation>contains</operation>
            <value>Release 1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Default_Record_Type</value>
        </filters>
        <label>Kevin - Release 1 Tech Req</label>
        <sharedTo>
            <group>ACN_Biz_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Release_1b_Discovery_Reqs</fullName>
        <columns>NAME</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Capability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Planned_Release__c</field>
            <operation>equals</operation>
            <value>Release 1b Discovery</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Default_Record_Type</value>
        </filters>
        <label>Release 1b Discovery HL Reqs</label>
    </listViews>
    <listViews>
        <fullName>Tech_Req_New</fullName>
        <columns>NAME</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Planned_Release__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requirement_Type__c</field>
            <operation>equals</operation>
            <value>Technical</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Identify: New Requirement</value>
        </filters>
        <label>Tech Req. New</label>
    </listViews>
    <listViews>
        <fullName>Tech_Req_Ready_for_Offshore</fullName>
        <columns>NAME</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requirement_Type__c</field>
            <operation>equals</operation>
            <value>Technical</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Release: Design,Release: Build</value>
        </filters>
        <label>Tech Req. Ready for Offshore</label>
    </listViews>
    <listViews>
        <fullName>Technical_Requirements1</fullName>
        <columns>NAME</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Planned_Release__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requirement_Type__c</field>
            <operation>equals</operation>
            <value>Technical</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Consolidate: Approve to Estimate</value>
        </filters>
        <label>Tech Req. Ready for Onshore</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <recordTypes>
        <fullName>Default_Record_Type</fullName>
        <active>true</active>
        <description>Default Record Type</description>
        <label>Default Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ClosedDeferredReasonRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
        OR(
              ISPICKVAL
                      (Status__c, &quot;Close: Rejected&quot;),
               ISPICKVAL
                      ( Status__c ,&quot;Identify: Deferred&quot;)
               ),

(ISPICKVAL(Closed_Deferred__c,&quot;&quot;)
)    )</errorConditionFormula>
        <errorDisplayField>Closed_Deferred__c</errorDisplayField>
        <errorMessage>You must pick a value for the Closed/Deferred Reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ClosedDuplicateRelateRequest</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(ISPICKVAL(Status__c, &quot;Close: Duplicate&quot;)),
(ISBLANK(Related_Request__c))
)</errorConditionFormula>
        <errorDisplayField>Related_Request__c</errorDisplayField>
        <errorMessage>Must Enter Related Request Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Positive_Effort</fullName>
        <active>true</active>
        <description>All numbers entered under level of effort should be positive.</description>
        <errorConditionFormula>OR( Adapt__c &lt; 0,  BUT__c &lt; 0, Des__c &lt; 0, SIT__c &lt; 0, TrnDep__c &lt; 0, UAT__c &lt;0, Req__c &lt;0)</errorConditionFormula>
        <errorMessage>Please enter a value greater than 0 for fields under Total Level of Effort.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Update_after_Release_Test</fullName>
        <active>false</active>
        <errorConditionFormula>OR
(
   AND
   (
      ISPICKVAL(Status__c, &quot;Release: Test&quot;),
      ISCHANGED(Request_Description__c) 
   ),
   AND
   (
      ISPICKVAL(PRIORVALUE(Status__c),&quot;Release: Test&quot;),
      ISCHANGED(Status__c)
   )
)</errorConditionFormula>
        <errorMessage>You are unable to make modifications to this request since the status is in &quot;Release: Test&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RemovedFromRelease</fullName>
        <active>true</active>
        <description>If Checkbox is checked, removed from release must be populated</description>
        <errorConditionFormula>Removed_Release__c = TRUE &amp;&amp;  Removed_From_Release__c = &quot;&quot;</errorConditionFormula>
        <errorDisplayField>Removed_From_Release__c</errorDisplayField>
        <errorMessage>You must provide the release that the request was removed from.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StatusClosedDuplicate</fullName>
        <active>true</active>
        <description>When Status is Closed:Duplicate the Related Request field should not blank</description>
        <errorConditionFormula>AND(
     (ISPICKVAL(Status__c, &quot;Close: Duplicate&quot;)),
     (ISBLANK(Related_Request__c))
    )</errorConditionFormula>
        <errorDisplayField>Related_Request__c</errorDisplayField>
        <errorMessage>You must provide Related Request Value</errorMessage>
    </validationRules>
</CustomObject>